--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -48,6 +48,16 @@ table {
 }
 
 /*
+=================================================
+Custom Styles
+=================================================
+*/
+body{
+  color:#888;
+  font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+/*
   ========================================
   Grid
   ========================================
@@ -103,7 +113,7 @@ table {
 }
 .group {
   clear: both;
-  *zoom: 1;
+  zoom: 1;
 }
 
 /*
@@ -114,6 +124,50 @@ table {
 
 h1, h3, h4, h5, p {
   margin-bottom: 22px;
+}
+
+h1, h2, h3, h4{
+  color:#648880
+}
+h1{
+  font-size:36px;
+  line-height:44px;
+}
+h2{
+  font-size:24px;
+  line-height:44px;
+}
+h3{
+  font-size:21px;
+}
+h4{
+  font-size:18px;
+}
+h5{
+  color:#a9b2b9;
+  font-size:14px;
+  font-weight:400;
+}
+strong{
+  font-weight:400;
+}
+cite, em{
+  font-style:italic;
+}
+
+/*
+=================================================
+links
+=================================================
+*/
+a:hover{
+  color: #a9b2b9;
+}
+a{
+  color:#648880;
+}
+.teaser a:hover h3{
+  color:#a9b2b9;
 }
 
 /*
@@ -142,6 +196,15 @@ h1, h3, h4, h5, p {
   border-top: 4px solid #648880;
   float: left;
   padding: 40px 0 22px 0;
+  font-size:48px;
+  line-height:44px;
+}
+.tagline{
+  margin:66px 0 22 px 0;
+}
+.primary-nav{
+  font-size:14px;
+  font-weight:400;
 }
 
 /*
@@ -153,9 +216,12 @@ h1, h3, h4, h5, p {
 .primary-footer {
   padding-bottom: 44px;
   padding-top: 44px;
+  color:#648880;
+  font-size:14px;
 }
 .primary-footer small {
   float: left;
+  font-weight:400;
 }
 
 /*
@@ -166,5 +232,11 @@ h1, h3, h4, h5, p {
 
 .hero {
   padding: 22px 80px 66px 80px;
+  line-height:44px;
 }
-
+.hero h2{
+  font-size:36px
+}
+.hero p{
+  font-size:24px;
+}
