--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -48,14 +48,15 @@ table {
 }
 
 /*
-=================================================
-Custom Styles
-=================================================
+  ========================================
+  Custom styles
+  ========================================
 */
-body{
-  color:#888;
-  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+body {
   background: #293f50;
+  color: #888;
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /*
@@ -114,7 +115,29 @@ body{
 }
 .group {
   clear: both;
-  zoom: 1;
+  *zoom: 1;
+}
+
+/*
+  ========================================
+  Rows
+  ========================================
+*/
+
+.row,
+.row-alt {
+  min-width: 960px;
+}
+.row {
+  background: #fff;
+  padding: 66px 0 44px 0;
+}
+.row-alt {
+  background: #cbe2c1;
+  background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background:    -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background:         linear-gradient(to right, #a1d3b0, #f6f1d3);
+  padding: 44px 0 22px 0;
 }
 
 /*
@@ -123,68 +146,79 @@ body{
   ========================================
 */
 
+h1, h2, h3, h4 {
+  color: #648880;
+}
 h1, h3, h4, h5, p {
   margin-bottom: 22px;
 }
-
-h1, h2, h3, h4{
-  color:#648880
+h1 {
+  font-size: 36px;
+  line-height: 44px;
 }
-h1{
-  font-size:36px;
-  line-height:44px;
+h2 {
+  font-size: 24px;
+  line-height: 44px;
 }
-h2{
-  font-size:24px;
-  line-height:44px;
+h3 {
+  font-size: 21px;
 }
-h3{
-  font-size:21px;
+h4 {
+  font-size: 18px;
 }
-h4{
-  font-size:18px;
+h5 {
+  color: #a9b2b9;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
 }
-h5{
-  color:#a9b2b9;
-  font-size:14px;
-  font-weight:400;
-  text-transform:uppercase;
+strong {
+  font-weight: 400;
 }
-strong{
-  font-weight:400;
-}
-cite, em{
-  font-style:italic;
+cite,
+em {
+  font-style: italic;
 }
 
 /*
-=================================================
-links
-=================================================
+  ========================================
+  Leads
+  ========================================
 */
-a:hover{
+
+.lead {
+  text-align: center;
+}
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
+}
+
+/*
+  ========================================
+  Links
+  ========================================
+*/
+
+a {
+  color: #648880;
+  text-decoration: none;
+}
+a:hover {
   color: #a9b2b9;
 }
-a{
-  color:#648880;
-  text-decoration:none;
-}
-.teaser a:hover h3{
-  color:#a9b2b9;
-}
 p a {
-  border-bottom:1px solid #dfe2e5;
+  border-bottom: 1px solid #dfe2e5;
 }
 .primary-header a,
-.primary-footer a{
-  color:#fff;
+.primary-footer a {
+  color: #fff;
 }
 .primary-header a:hover,
-.primary-footer a:hover{
-  color:#648880;
-  text-decoration:none;
+.primary-footer a:hover {
+  color: #648880;
 }
-  
+
 /*
   ========================================
   Buttons
@@ -192,23 +226,24 @@ p a {
 */
 
 .btn {
-  color:#fff;
-  cursor:pointer;
   border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
   display: inline-block;
+  font-weight: 400;
+  letter-spacing: .5px;
   margin: 0;
-  letter-spacing: uppercase;
-  font-weight:400;
+  text-transform: uppercase;
 }
 .btn-alt {
   border: 1px solid #fff;
   padding: 10px 30px;
-  transition:.3s;
 }
-.btn-alt:hover{
-  background:#fff;
-  color:#648880
+.btn-alt:hover {
+  background: #fff;
+  color: #648880;
 }
+
 /*
   ========================================
   Primary header
@@ -218,22 +253,22 @@ p a {
 .logo {
   border-top: 4px solid #648880;
   float: left;
+  font-size: 48px;
   font-weight: 100;
   letter-spacing: .5px;
+  line-height: 44px;
   padding: 40px 0 22px 0;
-  font-size:48px;
-  line-height:44px;
   text-transform: uppercase;
 }
-.tagline{
-  margin:66px 0 22px 0;
+.tagline {
+  margin: 66px 0 22px 0;
   text-align: right;
 }
-.primary-nav{
-  font-size:14px;
-  font-weight:400;
-  letter-spacing:.5px;
-  text-transform:uppercase;
+.primary-nav {
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: .5px;
+  text-transform: uppercase;
 }
 
 /*
@@ -243,14 +278,24 @@ p a {
 */
 
 .primary-footer {
+  color: #648880;
+  font-size: 14px;
   padding-bottom: 44px;
   padding-top: 44px;
-  color:#648880;
-  font-size:14px;
 }
 .primary-footer small {
   float: left;
-  font-weight:400;
+  font-weight: 400;
+}
+
+/*
+  ========================================
+  Navigation
+  ========================================
+*/
+
+.nav {
+  text-align: right;
 }
 
 /*
@@ -260,35 +305,18 @@ p a {
 */
 
 .hero {
-  color:#fff;
+  color: #fff;
+  line-height: 44px;
   padding: 22px 80px 66px 80px;
-  line-height:44px;
   text-align: center;
 }
-.hero h2{
-  font-size:36px;
+.hero h2 {
+  font-size: 36px;
 }
-.hero p{
-  font-size:24px;
+.hero p {
+  font-size: 24px;
   font-weight: 100;
 }
-
-/*
-  ========================================
-  Navigation
-  ========================================
-*/
-.nav{
-  text-align: right;
-}
-
-/*
-=================================================
-Rows
-=================================================
-*/
-.row{
-  background:#fff;
-  min-width:960px;
-  padding:66px 0px 44px 0px;
+.teaser a:hover h3 {
+  color: #a9b2b9;
 }
