--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -328,7 +328,9 @@ p a {
 .teaser a:hover h3 {
   color: #a9b2b9;
 }
-
+.teaser img{
+  border-radius:
+}
 /*
   ========================================
   Speakers
