--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -329,7 +329,10 @@ p a {
   color: #a9b2b9;
 }
 .teaser img{
-  border-radius:
+  border-radius: 5px;
+  display:block;
+  margin-bottom:22px;
+  max-width: 100%;
 }
 /*
   ========================================
@@ -344,6 +347,25 @@ p a {
   border: 1px solid #dfe2e5;
   border-radius: 5px;
   margin-top: 88px;
-  padding: 22px 0;
+  padding-bottom: 22px;
   text-align: center;
+}
+.speaker-info img{
+  border-radius:50%;
+  height:130px;
+  margin:-66px 0 22px 0;
+  vertical-align:top;
+}
+
+/*
+  ========================================
+  Venue
+  ========================================
+*/
+
+.venue-theatre {
+  margin-bottom: 66px;
+}
+.venue-hotel {
+  margin-bottom: 22px;
 }
